--- a/.project
+++ b/.project
@@ -2,15 +2,23 @@
 <projectDescription>
 	<name>morefuelsmod-1.11</name>
 	<comment></comment>
-	<projects/>
-	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-	</natures>
+	<projects>
+	</projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments/>
+			<arguments>
+			</arguments>
 		</buildCommand>
 	</buildSpec>
-	<linkedResources/>
+	<natures>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+	</natures>
+	<linkedResources>
+		<link>
+			<name>.link1</name>
+			<type>2</type>
+			<location>C:/Users/Noah/.gradle/caches/minecraft/net/minecraftforge/forge/1.11.2-13.20.0.2201/start</location>
+		</link>
+	</linkedResources>
 </projectDescription>
